Included panelsType field in the API
